--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.35.0",
+    "iconv-lite": "^0.7.2",
     "lucide-react": "^0.562.0",
-    "react-dom": "^19.2.3",
     "react": "^19.2.3",
-    "@google/genai": "^1.35.0"
+    "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
